--- a/src/components/components.css
+++ b/src/components/components.css
@@ -32,7 +32,8 @@
     left:0;
     width:var(--side-panel-width);
     display:flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .AudioTrackHelper{
@@ -65,6 +66,7 @@
     width:var(--side-panel-width);
 }
 .AudioTimeline{
+    position:relative;
     border:solid black 1px;
     width:max-content;
     white-space: nowrap;
@@ -72,4 +74,12 @@
 .AudioTimeline div{
     display:inline-block;
     border-left:solid gray 1px;
+}
+
+.AudioTimeline::before{
+    width:100px;
+    height:800px;
+    position:absolute;
+    background-color: red;
+    border:solid black 1px;
 }
