drag events in track, left resize on snap bug

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -35,19 +35,23 @@ html{
     height:100%;
 }
 
+.AudioRegion .StartHandle:hover,
+.AudioRegion .EndHandle:hover{
+    cursor: col-resize;
+}
+.AudioRegion:hover {
+    cursor: grab;
+}
+
 .AudioTrack{
     background:cyan;
     border:solid black 1px;
     white-space: nowrap;
     display:flex;
-    height:50px;
-}
-.AudioTrack .content{
     position:relative;
     width:100%;
     height:50px;
 }
-
 
 .EditorField{
     border: solid black 1px;
