--- a/src/components/components.css
+++ b/src/components/components.css
@@ -15,11 +15,12 @@ html{
     display:flex;
     justify-content: space-between;
     align-items: center;
-
+    z-index: 1;
 }
 
 .AudioRegionDrag{
     background:red;
+    z-index: 10;
 }
 .AudioRegion .StartHandle,
 .AudioRegion .EndHandle {
