--- a/src/components/components.css
+++ b/src/components/components.css
@@ -7,9 +7,6 @@ html{
 
 .AudioRegion{
     position:absolute;
-    height:60px;
-    margin-top: 5px;
-    margin-bottom: 5px;
     background:pink;
     border: solid black 1px;
     display:flex;
@@ -19,14 +16,13 @@ html{
     overflow: hidden;
     border-radius: 10px;
 }
- svg {
+svg {
     position: absolute;
     left:0;
     top:0;
 }
 .AudioRegionCutIndicator {
     position: absolute;
-    height:70px;
     border-left: solid red 2px;
     z-index: 10;
     pointer-events: none;
@@ -37,6 +33,7 @@ html{
     background:rgba(255, 58, 245, 0.178);
     border-width:2px;  
     border-style:dashed;
+    height:100%;
 }
 .AudioRegionGhostBuffer{
     pointer-events: none;
@@ -44,6 +41,7 @@ html{
     background:rgba(83, 184, 0, 0.5);
     border-width:2px;  
     border-style:dashed;
+    height:100%;
 }
 .AudioRegionDrag{
     background:red;
@@ -76,7 +74,6 @@ html{
     white-space: nowrap;
     position:relative;
     width:100%;
-    height:70px;
 }
 
 .EditorField{
@@ -107,7 +104,6 @@ html{
     display:inline-block;
     position: sticky;
     left:0;
-    height:50px;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -121,7 +117,6 @@ html{
     position: absolute;
     left: 100%;
     flex-direction: row;
-    height:50px;
     overflow: hidden;
 }
 .TrackTool:hover .TrackToolHelper{
