WIP PointerHandle and css transforms

--- a/src/css/AudioRegion.css
+++ b/src/css/AudioRegion.css
@@ -39,7 +39,7 @@ svg {
     border-style:dashed;
     height:100%;
 }
-.AudioRegionDrag{
+.AudioRegionSelected{
     background:red;
     z-index: 10;
 }
