small css cleanup

--- a/src/css/AudioTrack.css
+++ b/src/css/AudioTrack.css
@@ -1,6 +1,6 @@
 .AudioTrack{
-    background:cyan;
-    border:solid black 1px;
+    background:lightgoldenrodyellow;
+    border:solid gray 1px;
     white-space: nowrap;
     position:relative;
     width:100%;
