--- a/src/css/AudioRegion.css
+++ b/src/css/AudioRegion.css
@@ -2,13 +2,14 @@
 .AudioRegion{
     position:absolute;
     background:pink;
-    border: solid black 1px;
+    border: solid black 3px;
     display:flex;
     justify-content: space-between;
     align-items: center;
     z-index: 1;
     border-radius: 10px;
     touch-action: none;
+    box-sizing: border-box;
 }
 .AudioRegionSVGContainer{
     position: relative;
@@ -26,19 +27,21 @@
 
 .AudioRegionGhostMove{
     pointer-events: none;
-    z-index: 20;
+    z-index: 2;
     background:rgba(255, 58, 245, 0.178);
     border-width:2px;  
     border-style:dashed;
-    height:100%;
+    height:90%;
+    top:5%;
 }
 .AudioRegionGhostBuffer{
     pointer-events: none;
-    z-index: 20;
+    z-index: 2;
     background:rgba(83, 184, 0, 0.5);
-    border-width:2px;  
     border-style:dashed;
-    height:100%;
+    border-width: 2px;
+    height:90%;
+    top:5%;
 }
 .AudioRegionSelected{
     background:red;
@@ -49,6 +52,17 @@
     cursor: grab;
 }
 
+.DragHandle {
+    background:green;
+    border-radius: 50%;
+}
+
+.AudioRegionFadeInHandle{
+    clip-path: polygon(0 0, 50% 0, 50% 100%, 0% 100%);
+}
+.AudioRegionFadeOutHandle{
+    clip-path: polygon(100% 0, 50% 0, 50% 100%, 100% 100%);
+}
 
 .AudioRegionCutHandle{
     border-radius:'50%';
