--- a/src/css/AudioRegion.css
+++ b/src/css/AudioRegion.css
@@ -1,6 +1,6 @@
 
 .AudioRegion{
-    display:block;
+    display:inline-block;
     z-index: 1;
     touch-action: none;
     box-sizing: border-box;
@@ -16,9 +16,8 @@
     z-index: 2;
     background:rgba(255, 58, 245, 0.178);
     border-width:2px;  
+    border-radius: 10px;
     border-style:dashed;
-    height:90%;
-    top:5%;
 }
 .AudioRegionGhostBuffer{
     pointer-events: none;
@@ -26,18 +25,12 @@
     background:rgba(83, 184, 0, 0.5);
     border-style:dashed;
     border-width: 2px;
-    height:90%;
-    top:5%;
+    border-radius: 10px;
 }
 .AudioRegionSelected{
-    z-index: 5;
-    overflow: visible;
+    z-index: 8;
 }
 
 .AudioRegion:hover {
-    cursor: grab;
-}
-
-.DragHandle circle{
-    fill:green;
+    cursor: pointer;
 }
