--- a/src/css/AudioTrack.css
+++ b/src/css/AudioTrack.css
@@ -1,9 +1,10 @@
 .AudioTrack{
-    background:lightgoldenrodyellow;
-    border:solid gray 1px;
+    background: red;
     white-space: nowrap;
     position:relative;
     width:100%;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .AudioTrackArmed{
