--- a/src/css/Time.css
+++ b/src/css/Time.css
@@ -18,6 +18,7 @@
     border-left:solid gray 1px;
     position: relative;
     height:2rem;
+    border-bottom: solid black 1px;
 }
 .Timeline .TimelineBar::before,
 .Timeline .TimelineBar::after{
