--- a/src/css/AudioRegion.css
+++ b/src/css/AudioRegion.css
@@ -1,20 +1,28 @@
-
+:root{
+    --col-sel:green;
+}
 .AudioRegion{
     display:inline-block;
     z-index: 1;
     touch-action: none;
     box-sizing: border-box;
 }
-.AudioRegionFrame{
+.AudioRegion .FrameSVG{
     fill:none;
     stroke:black;
-    stroke-width: 6px;
+    stroke-width: 3px;
+}
+.AudioRegion .FadeSVG{
+    stroke:black;
+    stroke-width: 1px;
+    fill: #ffffffaa;
 }
 
 .AudioRegionGhostMove{
     pointer-events: none;
     z-index: 2;
-    background:rgba(255, 58, 245, 0.178);
+    background:rgba(69, 112, 255, 0.178);
+    border-color: var(--col-sel);
     border-width:2px;  
     border-radius: 10px;
     border-style:dashed;
@@ -24,13 +32,21 @@
     z-index: 2;
     background:rgba(83, 184, 0, 0.5);
     border-style:dashed;
+    border-color: var(--col-sel);
     border-width: 2px;
     border-radius: 10px;
 }
 .AudioRegionSelected{
     z-index: 8;
 }
-
+.AudioRegionSelected g .FrameSVG,
+.AudioRegionSelected g .FadeSVG{
+    stroke: var(--col-sel);
+}
 .AudioRegion:hover {
     cursor: pointer;
+}
+
+.AudioRegion .HandleShadow{
+    /* filter:drop-shadow(0 0 5px black) */
 }
