--- a/src/css/AudioRegion.css
+++ b/src/css/AudioRegion.css
@@ -36,9 +36,11 @@
     border-width: 2px;
     border-radius: 10px;
 }
-.AudioRegionSelected{
+.AudioRegion.AudioRegionSelected{
     z-index: 8;
+    /* filter:drop-shadow(0px 0px 10px black); */
 }
+
 .AudioRegionSelected g .FrameSVG,
 .AudioRegionSelected g .FadeSVG{
     stroke: var(--col-sel);
